--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -1,1 +1,144 @@
 /* Adicionar aqui toda a estilização criada para sua aplicação. */
+@import url('https://fonts.googleapis.com/css2?family=Barlow:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Press+Start+2P&family=Rajdhani:wght@300;400;500;600;700&display=swap');
+
+* {
+    font-family: "Barlow", Arial, Helvetica, sans-serif;
+}
+
+body {
+    background-color: black;
+    margin: 0;
+}
+
+.container {
+    width: 80%;
+    margin: auto;
+    display: flex;
+}
+
+.header .container {
+    justify-content: space-between;
+
+}
+
+.header {
+
+    border-bottom: solid aqua 2px;
+
+}
+
+.header .container .titulo {
+
+    color: aqua;
+
+}
+
+.header .navbar {
+
+    color: yellow;
+    list-style-type: none;
+    display: flex;
+
+    justify-content: center;
+    align-items: center;
+    justify-content: space-evenly;
+    width: 300px;
+
+}
+
+.navbar a {
+    text-decoration: none;
+    color: yellow;
+
+}
+
+/* banner */
+.banner {
+    height: 600px;
+    background-image: url("../assets/imgs/bg-jelly-fish-para-home.png");
+}
+
+.banner .container p {
+    color: white;
+
+    font-size: 40px;
+    width: 45%;
+    align-items: center;
+
+
+}
+
+
+.banner .container {
+    height: 100%;
+    flex-direction: column-reverse;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+
+}
+
+.banner .container p span {
+    font-weight: 600;
+
+}
+
+.social {
+    background-color: #fff;
+
+}
+
+.boxes {
+    width: 100%;
+    display: flex;
+    justify-content: space-evenly;
+}
+
+.box {
+    width: 150px;
+
+
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+
+
+    text-align: center;
+    padding-top: 10px;
+}
+
+.box img {
+    display: flex;
+    width: 50%;
+}
+
+.box h4 {
+    color: crimson
+}
+
+.footer {
+    width: 100%;
+    display: flex;
+    color: #fff;
+    background-color: aqua;
+
+}
+
+.footer .container {
+
+margin: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+
+}
+
+.footer .version{
+    color: black;
+    display: flex;
+    justify-self: end;
+    font-size: 10px;
+    margin-left: 5px;
+    flex-direction: column;
+}
