--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -126,7 +126,7 @@ body {
 
 .footer .container {
 
-margin: auto;
+    margin: auto;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -134,11 +134,125 @@ margin: auto;
 
 }
 
-.footer .version{
+.footer .version {
     color: black;
     display: flex;
     justify-self: end;
     font-size: 10px;
     margin-left: 5px;
     flex-direction: column;
+}
+
+
+.login {
+
+    /* width: 100%; */
+    display: flex;
+    align-content: center;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 600px;
+    background-image: url("../assets/imgs/bg-jelly-fish-para-home.png");
+}
+
+.login .container {
+    display: flex;
+    height: 80%;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+
+}
+
+
+.container .card-login {
+    display: flex;
+    flex-direction: column;
+    background-color: #c9c9c9;
+    width: 90%;
+    height: 68%;
+    border-radius: 10px;
+    justify-content: flex-start;
+    align-items: center;
+}
+
+.card-login h2 {
+    color: rgb(200, 11, 74);
+    font-size: 30px;
+    font-weight: 600;
+}
+
+.formulario {
+    display: flex;
+    width: 100%;
+
+    flex-direction: column;
+    height: 100%;
+    align-items: center;
+}
+
+.campo span {
+    color: rgb(200, 11, 74);
+}
+
+.campo {
+    display: flex;
+    border-radius: 20px;
+    flex-direction: column;
+    align-items: flex-start;
+    width: 85%;
+}
+
+.campo input {
+    width: 95%;
+    border-radius: 5px;
+    border-color: aqua;
+    height: 30px;
+
+}
+
+input {
+    text-align: center;
+}
+
+.formulario .botao {
+    width: 100px;
+    height: 35px;
+    margin-top: 13px;
+    background-color: rgb(200, 11, 74);
+    color: #FFF;
+    border-radius: 5px;
+    font-size: medium;
+}
+
+.container .card-cadastro {
+    display: flex;
+    background-color: #c9c9c9;
+    width: 95%;
+    height: 90%;
+    border-radius: 5px;
+    align-items: center;
+    flex-direction: column;
+}
+
+.card-cadastro h2 {
+    color: rgb(200, 11, 74);
+    font-size: 30px;
+    font-weight: 600;
+}
+
+.card-cadastro .formulario {
+    display: flex;
+    width: 100%;
+    flex-direction: column;
+    height: 95%;
+    align-items: center;
+    justify-content: space-evenly;
+    justify-items: flex-start;
+}
+
+.card-cadastro button {
+    width: 100px;
+    margin-bottom: 10px;
 }
